QQuickStateOperations: updateGeometry() when setting x/y/w/h

Failing to call updateGeometry() and setting the various dirty flags
leads to inconsistent state.

Pick-to: 6.2 6.3
Fixes: QTBUG-99436
Fixes: QTBUG-98857
Change-Id: I15240b1670947da29e2f05e7ea41c7586f0b987a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>